--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ target/
 .factorypath
 .project
 .settings
+.metadata/
 .springBeans
 .sts4-cache
 
@@ -31,3 +32,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+bin/
+
+application-local.properties
